/*
 * Copyright (c) 2023 Contributors to the Eclipse Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

package org.eclipse.kuksa.connectivity.databroker.request

import org.eclipse.kuksa.proto.v1.Types
import org.eclipse.kuksa.proto.v1.Types.Datapoint

/**
 * Used for update requests with [org.eclipse.kuksa.connectivity.databroker.DataBrokerConnection.update].
 */
class UpdateRequest @JvmOverloads constructor(
    override val vssPath: String,
    val dataPoint: Datapoint,
    override vararg val fields: Types.Field = arrayOf(Types.Field.FIELD_VALUE),
) : DataBrokerRequest
